--- a/src/components/data/projects.json
+++ b/src/components/data/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "title": "Booki",
     "description": "Intégration responsive de la page d’accueil d’une agence de voyage en HTML/CSS",
-    "image": "/imagesProject/Booki-2.webp",
+    "image": "imagesProject/Booki-2.webp",
     "technologies": ["HTML5", "CSS3"],
     "link": "https://vico04.github.io/ProjetBooki/",
     "repo": "https://github.com/vico04/ProjetBooki"
@@ -12,7 +12,7 @@
     "id": 2,
     "title": "Sophie Bluel - Architecte d'intérieur",
     "description": "Développement complet d’un site vitrine administrable pour une architecte d’intérieur",
-    "image": "/imagesProject/Sophie_bluel.webp",
+    "image": "imagesProject/Sophie_bluel.webp",
     "technologies": "Javascript",
     "repo": "https://github.com/vico04/Portfolio-architecte-sophie-bluel"
   },
@@ -21,7 +21,7 @@
     "id": 3,
     "title": "Photographe - Nina Carducci",
     "description": "Audit, debug et optimisation SEO et accessibilité d’un site photo",
-    "image": "/imagesProject/Nina_Carducci.webp",
+    "image": "imagesProject/Nina_Carducci.webp",
     "technologies": ["Lighthouse", "Wave", "Bootstrap"],
     "link": "https://vico04.github.io/Nina-Carducci-Dev/",
     "repo": "https://github.com/vico04/Nina-Carducci-Dev"
